@@ -74,6 +74,11 @@ bool CSceneNodeAnimatorCameraMaya::OnEvent(const SEvent& event)
 		MouseKeys[1] = false;
 		break;
 	case EMIE_MOUSE_MOVED:
+		// check states again because sometimes the gui has already catched events
+		MouseKeys[0] = event.MouseInput.isLeftPressed();
+		MouseKeys[2] = event.MouseInput.isRightPressed();
+		MouseKeys[1] = event.MouseInput.isMiddlePressed();
+
 		MousePos = CursorControl->getRelativePosition();
 		break;
 	case EMIE_MOUSE_WHEEL:
